[FIX] web_editor: adjust toolbar visibility outside modals
The overlayed mobile editor toolbar has a z-index specifically chosen so that
it is still visible inside bootstrap modals (with z-index: 1055). As a
consequence, toolbars outside modals will also be overlayed on top of the modal
when their visibility is not restricted in another way.

opw-3224205

--- a/addons/web_editor/static/src/scss/wysiwyg.scss
+++ b/addons/web_editor/static/src/scss/wysiwyg.scss
@@ -398,9 +398,15 @@ $o-we-zindex: $o-we-overlay-zindex + 1 !default;
 
 body:not(.editor_has_snippets) {
     .oe-toolbar {
-        // Bootstrap sets .modal z-index at 1055. Ensure toolbar is visible in
-        // modals. Only apply this to the toolbar if it's not in a snippets menu.
         z-index: 1056;
+    }
+    .oe-toolbar.oe-floating {
+        z-index: 990;
+        .modal & {
+            // Bootstrap sets .modal z-index at 1055. Ensure toolbar is visible in
+            // modals. Only apply this to the toolbar if it's not in a snippets menu.
+            z-index: 1056;
+        }
     }
 }
 @media only screen and (max-width: 767px) {
